test_envoy/envoy/envoy-front.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }
static_resources:
    listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 4748 }
      filter_chains:
      - filters:
        - name: envoy.http_connection_manager
          typed_config:
            "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
            codec_type: auto
            stat_prefix: grpc_json
            idle_timeout: 0.840s
            use_remote_address: true
            add_user_agent: true
            route_config:
              name: local_route
              virtual_hosts:
              - name: app
                domains: "*"
                routes:
                - match:
                    prefix: "/"
                  route:
                    cluster: app
                    num_retries: "5"
            http_filters:
              - name: envoy.grpc_http1_bridge
              - name: envoy.grpc_json_transcoder
                config:
                    proto_descriptor: "/app/proto/registration.pb"
                    services: ["housing.Registration"]
              - name: envoy.router
    clusters:
      - name: app
        connect_timeout: 0.500s
        type: LOGICAL_DNS
        dns_lookup_family: V4_ONLY
        lb_policy: ROUND_ROBIN
        http2_protocol_options: {}
        load_assignment:
          cluster_name: app
          endpoints:
            - lb_endpoints:
                - endpoint:
                    address:
                      socket_address:
                        address: app
                        port_value: 50051
